--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,14 @@
             <version>1.18</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.5</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-moxy</artifactId>
             <version>2.5</version>
         </dependency>
 
