--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.jaspersoft</groupId>
     <artifactId>jasperserver-jaxrs-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.8.3</version>
 
 
     <properties>
