--- a/pom.xml
+++ b/pom.xml
@@ -23,21 +23,18 @@
     </distributionManagement>
 
     <repositories>
+
         <repository>
-            <id>my.mvn.repo</id>
-            <url>https://github.com/Jaspersoft/jrs-rest-java-client/tree/master/mvn-repo</url>
-            <!-- use snapshot version -->
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
+            <id>jaspersoft-repo</id>
+            <url>http://mvnrepo.jaspersoft.com:8081/artifactory/repo</url>
         </repository>
+
     </repositories>
 
     <dependencies>
 
         <dependency>
-            <groupId>com.jaspersoft</groupId>
+            <groupId>com.jaspersoft.jasperserver</groupId>
             <artifactId>jasperserver-dto</artifactId>
             <version>5.6.0-SNAPSHOT</version>
         </dependency>
@@ -71,5 +68,18 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
