--- a/src/test/resources/url.properties
+++ b/src/test/resources/url.properties
@@ -20,3 +20,7 @@
 #
 
 url=http://localhost:4444/jasperserver/
+contentMimeType=JSON
+acceptMimeType=JSON
+#contentMimeType=XML
+#acceptMimeType=XML
