--- a/src/test/resources/url.properties
+++ b/src/test/resources/url.properties
@@ -19,7 +19,7 @@
 # along with this program.&nbsp; If not, see <http://www.gnu.org/licenses/>.
 #
 
-url=https://localhost:4444/jasperserver/
+url=http://localhost:4444/jasperserver/
 contentMimeType=JSON
 acceptMimeType=JSON
 #contentMimeType=XML
