--- a/pom.xml
+++ b/pom.xml
@@ -56,15 +56,17 @@
             <version>3.3.2</version>
         </dependency>
 
-
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.5</version>
+        </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8.7</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <repositories>
