--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,9 @@
         </dependency>
         <!--to delete easymock-->
         <!--<dependency>-->
-            <!--<groupId>org.powermock</groupId>-->
-            <!--<artifactId>powermock-easymock-release-full</artifactId>-->
-            <!--<version>${powermock.version}</version>-->
+        <!--<groupId>org.powermock</groupId>-->
+        <!--<artifactId>powermock-easymock-release-full</artifactId>-->
+        <!--<version>${powermock.version}</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.easymock</groupId>
@@ -105,6 +105,52 @@
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>2.2.0</version>
+            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>cobertura-maven-plugin</artifactId>-->
+            <!--<version>2.6</version>-->
+            <!--<configuration>-->
+            <!--<check>-->
+            <!--<branchRate>85</branchRate>-->
+            <!--<lineRate>85</lineRate>-->
+            <!--<haltOnFailure>true</haltOnFailure>-->
+            <!--<totalBranchRate>85</totalBranchRate>-->
+            <!--<totalLineRate>85</totalLineRate>-->
+            <!--<packageLineRate>85</packageLineRate>-->
+            <!--<packageBranchRate>85</packageBranchRate>-->
+            <!--<regexes>-->
+            <!--<regex>-->
+            <!--<pattern>com.jaspersoft.jasperserver.jaxrs.client.core.*</pattern>-->
+            <!--<branchRate>90</branchRate>-->
+            <!--<lineRate>80</lineRate>-->
+            <!--</regex>-->
+            <!--<regex>-->
+            <!--<pattern>com.jaspersoft.jasperserver.jaxrs.client.dto.*</pattern>-->
+            <!--<branchRate>40</branchRate>-->
+            <!--<lineRate>30</lineRate>-->
+            <!--</regex>-->
+            <!--</regexes>-->
+            <!--</check>-->
+            <!--</configuration>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<goals>-->
+            <!--<goal>clean</goal>-->
+            <!--<goal>check</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
     <developers>
@@ -114,15 +160,6 @@
             <email>borys.kolesnikov@gmail.com</email>
             <roles>
                 <role>architect</role>
-                <role>developer</role>
-            </roles>
-            <timezone>+3</timezone>
-        </developer>
-        <developer>
-            <id>Krasnyanskiy</id>
-            <name>Alexander Krasnyanskiy</name>
-            <email>krasnyanskiy.alex@gmail.com</email>
-            <roles>
                 <role>developer</role>
             </roles>
             <timezone>+3</timezone>
