--- a/pom.xml
+++ b/pom.xml
@@ -92,65 +92,63 @@
         <developerConnection>scm:git:https://github.com/Jaspersoft/jrs-rest-java-client</developerConnection>
         <tag>HEAD</tag>
     </scm>
+
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.9</version>-->
+                <!--<configuration>-->
+                    <!--&lt;!&ndash;<skipTests>false</skipTests>&ndash;&gt;-->
+                    <!--<suiteXmlFiles>-->
+                        <!--<suiteXmlFile>src/test/resources/conf.xml</suiteXmlFile>-->
+                    <!--</suiteXmlFiles>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>cobertura-maven-plugin</artifactId>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>org.eluder.coveralls</groupId>-->
+                <!--<artifactId>coveralls-maven-plugin</artifactId>-->
+                <!--<version>2.2.0</version>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    <!--</build>-->
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
-                    <!--<skipTests>false</skipTests>-->
-                    <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/conf.xml</suiteXmlFile>
-                    </suiteXmlFiles>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
+                    <aggregate>true</aggregate>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>2.2.0</version>
+                <version>2.0.0</version>
+                <configuration>
+                    <repoToken>GJiEKl32LnBMkwmX8r98ntgjCkGoRHBpz</repoToken>
+                </configuration>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>org.codehaus.mojo</groupId>-->
-            <!--<artifactId>cobertura-maven-plugin</artifactId>-->
-            <!--<version>2.6</version>-->
-            <!--<configuration>-->
-            <!--<check>-->
-            <!--<branchRate>85</branchRate>-->
-            <!--<lineRate>85</lineRate>-->
-            <!--<haltOnFailure>true</haltOnFailure>-->
-            <!--<totalBranchRate>85</totalBranchRate>-->
-            <!--<totalLineRate>85</totalLineRate>-->
-            <!--<packageLineRate>85</packageLineRate>-->
-            <!--<packageBranchRate>85</packageBranchRate>-->
-            <!--<regexes>-->
-            <!--<regex>-->
-            <!--<pattern>com.jaspersoft.jasperserver.jaxrs.client.core.*</pattern>-->
-            <!--<branchRate>90</branchRate>-->
-            <!--<lineRate>80</lineRate>-->
-            <!--</regex>-->
-            <!--<regex>-->
-            <!--<pattern>com.jaspersoft.jasperserver.jaxrs.client.dto.*</pattern>-->
-            <!--<branchRate>40</branchRate>-->
-            <!--<lineRate>30</lineRate>-->
-            <!--</regex>-->
-            <!--</regexes>-->
-            <!--</check>-->
-            <!--</configuration>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<goals>-->
-            <!--<goal>clean</goal>-->
-            <!--<goal>check</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
         </plugins>
     </build>
     <developers>
