Added test for core EncryptionUtils class.

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
             <artifactId>easymock</artifactId>
             <version>3.2</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.bouncycastle</groupId>-->
+            <!--<artifactId>bcprov-jdk16</artifactId>-->
+            <!--<version>1.45</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.bouncycastle</groupId>-->
+            <!--<artifactId>bcpg-jdk16</artifactId>-->
+            <!--<version>1.46</version>-->
+        <!--</dependency>-->
     </dependencies>
     <repositories>
         <repository>
