--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ install: mvn install -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6 -Ds
 script: mvn test -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6
 
 after_success:
-  - mvn clean cobertura:cobertura coveralls:cobertura
+#  - mvn clean cobertura:cobertura coveralls:cobertura
+  - mvn clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:cobertura
