--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
-install: mvn install -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6 -DskipTests=true
-script: mvn test -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6
+#install: mvn install -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6 -DskipTests=true
+#script: mvn test -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6
+
+jdk:
+- oraclejdk6
 
 branches:
   only:
@@ -8,4 +11,4 @@ branches:
 
 after_success:
 #  - mvn clean cobertura:cobertura coveralls:cobertura
-  - mvn clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:cobertura
+  - mvn clean test jacoco:report coveralls:jacoco
