--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>jasperserver-dto</artifactId>
             <version>5.6.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.jaspersoft.jasperserver</groupId>-->
+            <!--<artifactId>jasperserver-dto</artifactId>-->
+            <!--<version>5.6.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
@@ -102,19 +107,6 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
-
-            <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>cobertura-maven-plugin</artifactId>-->
-                <!--<version>2.5.2</version>-->
-                <!--<configuration>-->
-                    <!--<format>xml</format>-->
-                    <!--<maxmem>256m</maxmem>-->
-                    <!--<aggregate>true</aggregate>-->
-                    <!--<check/>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
