--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ script: mvn test -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6
 #jdk:
 #- oraclejdk6
 
+notifications:
+  email:
+    - krasnyanskiy.alex@gmail.com
+
 branches:
   only:
     - develop
