--- a/pom.xml
+++ b/pom.xml
@@ -17,16 +17,16 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.jaspersoft.jasperserver</groupId>
-            <artifactId>jasperserver-dto</artifactId>
-            <version>5.6.0-SNAPSHOT</version>
-        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.jaspersoft.jasperserver</groupId>-->
             <!--<artifactId>jasperserver-dto</artifactId>-->
-            <!--<version>5.6.0</version>-->
+            <!--<version>5.6.0-SNAPSHOT</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>com.jaspersoft.jasperserver</groupId>
+            <artifactId>jasperserver-dto</artifactId>
+            <version>5.6.0</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
