--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: java
 
-install: mvn install -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6 -DskipTests=true
-script: mvn test -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6
+#install: mvn install -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6 -DskipTests=true
+#script: mvn test -Dmaven.compiler.target=1.6 -Dmaven.compiler.source=1.6
 
-#jdk:
-#- oraclejdk7
+jdk:
+   - oraclejdk7
+   #- openjdk7
+   #- openjdk6
 
 notifications:
   email:
@@ -19,4 +21,3 @@ branches:
 
 after_success:
   - mvn clean cobertura:cobertura coveralls:cobertura
-#  - mvn clean test jacoco:report coveralls:jacoco
