--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,7 @@
                     <instrumentation>
                         <excludes>
                             <exclude>**/com/jaspersoft/jasperserver/jaxrs/client/dto/**</exclude>
+                            <exclude>**/com/jaspersoft/jasperserver/jaxrs/client/apiadapters/resources/support/**</exclude>
                         </excludes>
                     </instrumentation>
                 </configuration>
