--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- EasyMock -->
+        <!-- EasyMock dependencies -->
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
@@ -103,7 +103,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Misc -->
+        <!-- Misc dependencies -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
@@ -168,7 +168,6 @@
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>1.7</version>
                 <executions>
-                    <!-- States that the plugin's add-test-source goal is executed at generate-test-sources phase. -->
                     <execution>
                         <id>add-integration-test-sources</id>
                         <phase>generate-test-sources</phase>
@@ -176,7 +175,6 @@
                             <goal>add-test-source</goal>
                         </goals>
                         <configuration>
-                            <!-- Configures the source directory of integration tests. -->
                             <sources>
                                 <source>src/integration-test/java</source>
                             </sources>
@@ -191,9 +189,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12</version>
                 <configuration>
-                    <!-- Skips unit tests if the value of skip.unit.tests property is true -->
                     <skipTests>${skip.unit.tests}</skipTests>
-                    <!-- Excludes integration tests when unit tests are run. ß-->
                     <excludes>
                         <exclude>**/IT*.java</exclude>
                     </excludes>
@@ -206,7 +202,6 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.12</version>
                 <executions>
-                    <!-- States that both integration-test and verify goals of the Failsafe Maven plugin are executed. -->
                     <execution>
                         <id>integration-tests</id>
                         <goals>
@@ -214,7 +209,6 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <!-- Skips integration tests if the value of skip.integration.tests property is true -->
                             <skipTests>${skip.integration.tests}</skipTests>
                         </configuration>
                     </execution>
