--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <jersey.version>2.13</jersey.version>
         <build.profile.id>dev</build.profile.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <skip.integration.tests>false</skip.integration.tests>
+        <skip.integration.tests>true</skip.integration.tests>
         <skip.unit.tests>false</skip.unit.tests>
     </properties>
 
