--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
 
 
         <!-- Build options -->
-        <build.profile.id>dev</build.profile.id>
-        <skip.integration.tests>true</skip.integration.tests>
-        <skip.unit.tests>false</skip.unit.tests>
+        <build.profile.id>unit-test</build.profile.id>
+        <skip.integration.tests>false</skip.integration.tests>
+        <skip.unit.tests>true</skip.unit.tests>
 
 
         <!-- Coverage tools dependencies -->
@@ -58,14 +58,19 @@
 
     <profiles>
         <profile>
-            <id>dev</id>
+            <id>unit-test</id>
+            <!--<properties>-->
+            <!--<build.profile.id>unit-test</build.profile.id>-->
+            <!--<skip.integration.tests>false</skip.integration.tests>-->
+            <!--<skip.unit.tests>true</skip.unit.tests>-->
+            <!--</properties>-->
         </profile>
         <profile>
             <id>integration-test</id>
             <properties>
                 <build.profile.id>integration-test</build.profile.id>
-                <skip.integration.tests>true</skip.integration.tests>
-                <skip.unit.tests>false</skip.unit.tests>
+                <skip.integration.tests>false</skip.integration.tests>
+                <skip.unit.tests>true</skip.unit.tests>
             </properties>
         </profile>
     </profiles>
@@ -101,6 +106,11 @@
             <artifactId>jersey-media-multipart</artifactId>
             <version>${jersey.version}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.glassfish.jersey.media</groupId>-->
+            <!--<artifactId>jersey-media-moxy</artifactId>-->
+            <!--<version>${jersey.version}</version>-->
+        <!--</dependency>-->
 
 
         <!-- TestNG dependencies -->
@@ -140,6 +150,15 @@
             <version>${easymock.version}</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!-- Logger -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
 
 
         <!-- Misc dependencies -->
