--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.jaspersoft.jasperserver</groupId>
-            <artifactId>jasperserver-dto</artifactId>
-            <version>5.6.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.jaspersoft.jasperserver</groupId>-->
+            <!--<artifactId>jasperserver-dto</artifactId>-->
+            <!--<version>5.6.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
@@ -93,6 +93,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.0.4</version>
         </dependency>
     </dependencies>
 
